[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meridian-search"
version = "0.1.0"
description = "Meridian is a semantic search product built on Exa with a shared Python core, FastAPI web API, React app, and Typer CLI."
requires-python = ">=3.11"
dependencies = [
  "exa-py>=1.0.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-cov>=5.0.0", "ruff>=0.5.0", "black>=24.4.0", "mypy>=1.10.0"]
redis = ["redis>=5.0.0"]
llm = ["openai>=1.40.0"]

[project.scripts]
meridian = "meridian_cli.__main__:app"

[tool.hatch.build.targets.wheel]
packages = ["packages/core/meridian_core", "packages/cli/meridian_cli", "packages/backend/app"]

[tool.pytest.ini_options]
pythonpath = [".", "packages/core", "packages/cli", "packages/backend"]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.black]
line-length = 120

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
